@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-05T00:46:50Z",
-  "count_outdated" : 1483,
-  "uniques_outdated" : 805,
+  "timestamp" : "2023-12-06T00:46:55Z",
+  "count_outdated" : 1485,
+  "uniques_outdated" : 806,
   "count" : 1514,
   "uniques" : 826,
   "clones" : [
-    {
-      "timestamp": "2023-11-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-22T00:00:00Z",
       "count": 2,
